// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalUserVoteItem /> should render correctly 1`] = `
<Modal
  animation={true}
  aria-labelledby="proposal-form-admin-question-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="proposal-form-admin-question-modal-title-lg"
    >
      <FormattedMessage
        id="question_modal.update.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Field
      component={[Function]}
      id="string.title"
      label={
        <FormattedMessage
          id="global.title"
          values={Object {}}
        />
      }
      name="string.title"
      type="text"
    />
    <Field
      component={[Function]}
      id="string.description"
      label={
        <span>
          <FormattedMessage
            id="global.description"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.description"
      type="editor"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[MockFunction]}
    />
    <Connect(SubmitButton)
      isSubmitting={false}
      label="global.validate"
      onSubmit={[MockFunction]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalUserVoteItem /> should render correctly button 1`] = `
<Modal
  animation={true}
  aria-labelledby="proposal-form-admin-question-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="proposal-form-admin-question-modal-title-lg"
    >
      <FormattedMessage
        id="question_modal.update.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Field
      component={[Function]}
      id="string.title"
      label={
        <FormattedMessage
          id="global.title"
          values={Object {}}
        />
      }
      name="string.title"
      type="text"
    />
    <Field
      component={[Function]}
      id="string.description"
      label={
        <span>
          <FormattedMessage
            id="global.description"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.description"
      type="editor"
    />
    <Field
      component={[Function]}
      id="string.color"
      label={
        <FormattedMessage
          id="global.color"
          values={Object {}}
        />
      }
      name="string.color"
      normalize={[Function]}
      type="select"
    >
      <option
        value=""
      >
        global.select
      </option>
      <option
        value="PRIMARY"
      >
        color.btn.primary.bg
      </option>
      <option
        value="SUCCESS"
      >
        global.green
      </option>
      <option
        value="INFO"
      >
        admin.fields.question_choice.colors.info
      </option>
      <option
        value="WARNING"
      >
        global.orange
      </option>
      <option
        value="DANGER"
      >
        global.red
      </option>
    </Field>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[MockFunction]}
    />
    <Connect(SubmitButton)
      isSubmitting={false}
      label="global.validate"
      onSubmit={[MockFunction]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalUserVoteItem /> should render correctly radio 1`] = `
<Modal
  animation={true}
  aria-labelledby="proposal-form-admin-question-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="proposal-form-admin-question-modal-title-lg"
    >
      <FormattedMessage
        id="question_modal.update.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Field
      component={[Function]}
      id="string.title"
      label={
        <FormattedMessage
          id="global.title"
          values={Object {}}
        />
      }
      name="string.title"
      type="text"
    />
    <Field
      component={[Function]}
      id="string.description"
      label={
        <span>
          <FormattedMessage
            id="global.description"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.description"
      type="editor"
    />
    <Field
      component={[Function]}
      help="global.image_uploader.image.dropzone"
      id="proposal_media"
      label={
        <span>
          <FormattedMessage
            id="proposal.media"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.image"
      type="image"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[MockFunction]}
    />
    <Connect(SubmitButton)
      isSubmitting={false}
      label="global.validate"
      onSubmit={[MockFunction]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalUserVoteItem /> should render correctly when not creating 1`] = `
<Modal
  animation={true}
  aria-labelledby="proposal-form-admin-question-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="proposal-form-admin-question-modal-title-lg"
    >
      <FormattedMessage
        id="question_modal.create.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Field
      component={[Function]}
      id="string.title"
      label={
        <FormattedMessage
          id="global.title"
          values={Object {}}
        />
      }
      name="string.title"
      type="text"
    />
    <Field
      component={[Function]}
      id="string.description"
      label={
        <span>
          <FormattedMessage
            id="global.description"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.description"
      type="editor"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[MockFunction]}
    />
    <Connect(SubmitButton)
      isSubmitting={false}
      label="global.validate"
      onSubmit={[MockFunction]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalUserVoteItem /> should render correctly when not show 1`] = `
<Modal
  animation={true}
  aria-labelledby="proposal-form-admin-question-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="proposal-form-admin-question-modal-title-lg"
    >
      <FormattedMessage
        id="question_modal.update.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Field
      component={[Function]}
      id="string.title"
      label={
        <FormattedMessage
          id="global.title"
          values={Object {}}
        />
      }
      name="string.title"
      type="text"
    />
    <Field
      component={[Function]}
      id="string.description"
      label={
        <span>
          <FormattedMessage
            id="global.description"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.description"
      type="editor"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[MockFunction]}
    />
    <Connect(SubmitButton)
      isSubmitting={false}
      label="global.validate"
      onSubmit={[MockFunction]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalUserVoteItem /> should render correctly when not show and not creating 1`] = `
<Modal
  animation={true}
  aria-labelledby="proposal-form-admin-question-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="proposal-form-admin-question-modal-title-lg"
    >
      <FormattedMessage
        id="question_modal.create.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Field
      component={[Function]}
      id="string.title"
      label={
        <FormattedMessage
          id="global.title"
          values={Object {}}
        />
      }
      name="string.title"
      type="text"
    />
    <Field
      component={[Function]}
      id="string.description"
      label={
        <span>
          <FormattedMessage
            id="global.description"
            values={Object {}}
          />
          <span
            className="excerpt"
          >
             
            <FormattedMessage
              id="global.optional"
              values={Object {}}
            />
          </span>
        </span>
      }
      name="string.description"
      type="editor"
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[MockFunction]}
    />
    <Connect(SubmitButton)
      isSubmitting={false}
      label="global.validate"
      onSubmit={[MockFunction]}
    />
  </ModalFooter>
</Modal>
`;
